# binary-remediation

./: generate_vuln_list.py  main.py  parse_vulns.py  principle_1.py  principle_2.py  principle_3.py  principle_4.py  pull_image.py  pyproject.toml
