[project]
name = "binary_image"
version = "0.1.0"
description = "To ensure the vulnerabilities TP/FP"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Madhu" }]
license = { text = "MIT" }

dependencies = [
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1,<0.29.0",
    "docker>=7.1.0",
    "pip>=23.3",
    "packaging>=24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tell hatch this is NOT a package, just scripts
[tool.hatch.build.targets.wheel]
only-include = ["*.py"]

[tool.pyright]
include = ["."]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
